[project]
name = "syaofox-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "pygithub==1.59.1",
    "wordcloud",
    "matplotlib",
    "python-dotenv>=1.0.0",
    "markdown>=3.4.0",
    "pymdown-extensions>=9.0",
]


[project.urls]
Homepage = "https://github.com/syaofox/syaofox.github.io"
Repository = "https://github.com/syaofox/syaofox.github.io"
Issues = "https://github.com/syaofox/syaofox.github.io/issues"

[tool.uv]
dev-dependencies = [
    "pytest>=6.0",
    "black>=22.0",
    "flake8>=4.0",
]


[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

