[project]
name = "syaofox-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "pygithub==1.59.1",
    "wordcloud",
    "matplotlib",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "requests>=2.25.0",
]


[project.urls]
Homepage = "https://github.com/syaofox/syaofox.github.io"
Repository = "https://github.com/syaofox/syaofox.github.io"
Issues = "https://github.com/syaofox/syaofox.github.io/issues"

[tool.uv]
dev-dependencies = [
    "pytest",
    "black", 
    "flake8"
]


[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

